add: Tracing middleware, Config check, Rate limiting

--- a/ProxySharp/appsettings.json
+++ b/ProxySharp/appsettings.json
@@ -1,4 +1,13 @@
 {
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft.AspNetCore": "Warning",
+        "System": "Warning"
+      }
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -6,7 +15,11 @@
     }
   },
   "AllowedHosts": "*",
+  /* The API URL */
   "BASE_URL": "",
+  /* API Credentials */
   "API_USERNAME": "",
-  "API_PASSWORD": ""
+  "API_PASSWORD": "",
+  /* Authorization Timeout - This is supposed to be half, if not less, than of your total regular HTTP requests */
+  "AUTH_TIMEOUT": 30
 }
