add: web proxy handler to httpclient

--- a/ProxySharp/appsettings.json
+++ b/ProxySharp/appsettings.json
@@ -16,10 +16,15 @@
   },
   "AllowedHosts": "*",
   /* The API URL */
-  "BASE_URL": "",
+  "BaseUrl": "",
   /* API Credentials */
-  "API_USERNAME": "",
-  "API_PASSWORD": "",
+  "Username": "",
+  "Password": "",
   /* Authorization Timeout - This is supposed to be half, if not less, than of your total regular HTTP requests */
-  "AUTH_TIMEOUT": 30
+  "AuthTimeout": 30,
+  "Proxy": {
+    "Url": "http://127.0.0.1:8888",
+    "Username": "",
+    "Password": ""
+  }
 }
